# sd-v5

./: .gitignore  README.md  app.py  download_prepare_data.py  pyproject.toml  requirements.txt  rf-v3.ipynb  t2i-v1.ipynb  t2i-v2.ipynb  t2i-v3.ipynb  t2i-v4.ipynb  timeline.md  train_t2i_v4.py
components/: model.py  model2.py  model3.py
